# esp_simple_wifi

./: .clang-format  .gitignore  CMakeLists.txt  README.md
components/esp_ez_wifi/: CMakeLists.txt  esp_ez_wifi.h  esp_ez_wifi_ap.c  esp_ez_wifi_ap.h  esp_ez_wifi_helper.c  esp_ez_wifi_sta.c  idf_component.yml
components/esp_ez_wifi/include/: esp_simple_wifi.h
components/esp_ez_wifi/src/: esp_simple_wifi_ap.c  esp_simple_wifi_ap.h  esp_simple_wifi_helper.c  esp_simple_wifi_helper.h  esp_simple_wifi_sta.c
components/esp_ez_wifi_sta/: CMakeLists.txt  esp_ez_wifi_sta.c  esp_ez_wifi_sta.h
components/esp_simple_wifi/: CMakeLists.txt
components/esp_simple_wifi/src/: esp_simple_wifi_ap.c  esp_simple_wifi_constants.h  esp_simple_wifi_helper.c  esp_simple_wifi_sta.c
main/: main.c  main.cpp
